--- a/index.html
+++ b/index.html
@@ -78,12 +78,8 @@
         <section class="posts">
           <article>
             <header>
-              <span class="date">April 24, 2017</span>
               <h2>
-                <a href="#"
-                  >Sed magna<br />
-                  ipsum faucibus</a
-                >
+                <a href="#">Data Cleaning in SQL</a>
               </h2>
             </header>
             <a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
