--- a/index.html
+++ b/index.html
@@ -92,10 +92,7 @@
             <header>
               <span class="date">April 22, 2017</span>
               <h2>
-                <a href="#"
-                  >Primis eget<br />
-                  imperdiet lorem</a
-                >
+                <a href="#">Covid data visualization</a>
               </h2>
             </header>
             <a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
