--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           </article>
           <article>
             <header>
-              <span class="date">April 22, 2017</span>
+              <!-- <span class="date">April 22, 2017</span> -->
               <h2>
                 <a href="#">Covid data visualization</a>
               </h2>
